# Digital-Brain-Platform

./: README.md
backend/digital-brain-backend/: README.md  main.py  pyproject.toml  requirements.txt  setup.py  start_rabbit_mq.sh
backend/digital-brain-backend/agents/: base_agent.py
backend/digital-brain-backend/agents/ideation/: catalyst.py  convergence.py  divergence.py
backend/digital-brain-backend/agents/story_builder/: aloryith_artifact_and_relic_curator_agent.py  aloryith_character_development_agent.py  aloryith_cultural_anthropologist_agent.py  aloryith_dialogue_and_language_specialist_agent.py  aloryith_emotional_and_thematic_tone_agent.py  aloryith_geographer_and_environmental_designer_agent.py  aloryith_myth_and_lore_keeper_agent.py  aloryith_plot_and_narrative_architect_agent.py  aloryith_story_orchestrator.py  aloryith_world_historian_agent.py
backend/digital-brain-backend/controllers/: aloryith_storybuilder.py  ideation.py  micro-learnings.py  welcome.py
backend/digital-brain-backend/langgraph/: micro_learnings_graph.py
backend/digital-brain-backend/models/: UserQuery.py
backend/digital-brain-backend/prompts/: aloryith_artifact_and_relic_curator_agent_prompt.py  aloryith_character_development_agent_prompt.py  aloryith_cultural_anthropologist_agent_prompt.py  aloryith_dialogue_and_language_agent_prompt.py  aloryith_emotional_and_thematic_tone_agent.py  aloryith_geographer_and_environmental_designer_agent_prompt.py  aloryith_myth_and_lore_keeper_agent_prompt.py  aloryith_plot_and_narrative_architect_agent_prompt.py  aloryith_story_orchestrator_prompt.py  aloryith_world_historian_agent_prompt.py
backend/digital-brain-backend/tests/: test_convergence.py
backend/mcp/weather/: pyproject.toml  weather.py
frontend/digital-brain-ui/: angular.json  package-lock.json  package.json
frontend/digital-brain-ui/src/: index.html  styles.scss
(+51 files in other folders)
