[tool.poetry]
name = "digital-brain-backend"
version = "0.1.0"
description = "Backend service for the Digital Brain Platform."
authors = ["Ian Tharp <praht09ian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
openai = "^1.54.4"
langchain = "^0.3.7"
pydantic = "^2.9.2"
pytest = "^8.3.3"
magicmock = "^0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
